tdf#167042 - sc cell comments texts should not be deleted

but the note text should be remembered in maNoteData to be able
to later reconstruct a caption from it.

Originally the bPreserveData was introduced and set to true in commit:
b8b657123cc508c906622d20669507628c93e104
(tdf#104967 preserve isolated notes data in clipboard when closing document)
The original bugdoc from tdf#104967 was checked with this patch and
had no crash with it.

Change-Id: I3b6c56e4828c11c2cab0351c95dd4bcb5762d86e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191396
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga@collabora.com>
(cherry picked from commit 01765ffe843953bbf7d1e2822512306d3776b3be)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191461
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191465